<resources>
    <string name="app_name">友借</string>
    <string name="system_error">系统错误，请稍后重试</string>
    <string name="network_error">网络错误，请检查您的网络设置</string>
    <string name="service_error">服务器正在维护，请稍后。。。</string>
    <string name="network_off_tip">请检查您的网络连接</string>
    <string name="network_error_tip">当前网络不可用</string>
    <string name="app_version_name">V 2.0.0</string>
    <string name="app_introduce">友借(www.youjie.me)朋友圈借钱好帮手,国内首款具有法律效力的朋友间借贷电子借据保存感情问题失.</string>
    <string name="app_custom_service">客服电话</string>
    <string name="app_feedback">意见反馈</string>
    <string name="app_customer_service">在线客服</string>
    <string name="person_real_name">实名</string>
    <string name="person_credit">征信</string>
    <string name="person_bank">银行卡</string>
    <string name="loan_payable">应还借款</string>
    <string name="repayment_receivable">应收还款</string>
    <string name="user_center">用户中心</string>
    <string name="my_borrowing">我的借贷</string>
    <string name="my_investment">我的投资</string>
    <string name="my_guarantee">我的担保</string>
    <string name="message_center">消息中心</string>
    <string name="about_me_app">关于我们</string>
    <string name="share_app">分享APP</string>
    <string name="share_title_hint">提示</string>
    <string name="upload_notice">上传须知</string>
    <string name="action_profile">我的</string>
    <string name="i_am_borrower">我是农民</string>
    <string name="i_am_lender">我是地主</string>
    <string name="manage_center">管理中心</string>
    <string name="home">首页</string>
    <string name="person_center">个人中心</string>
    <string name="total_borrow_user_count">应还%d个朋友</string>
    <string name="total_payback_interest_amount">累计还款利息</string>
    <string name="total_lender_user_count">%d个朋友应还你</string>
    <string name="total_earn_interest_amount">共赚到利息</string>
    <string name="borrow">借入</string>
    <string name="lender">借出</string>
    <string name="list">清单</string>
    <string name="lender_should">应收还款</string>
    <string name="borrower_should">应还借款</string>
    <string name="lender_interest">应收利息</string>
    <string name="borrower_interest">应还利息</string>
    <string name="list_without_login">您还没有登录，暂时不能查看借款记录噢</string>
    <string name="list_without_login_sure">去登录</string>
    <string name="list_without_login_cancel">取消</string>
    <string name="title_login">登录</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="validate_code_hint">请输入验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="login_btn">登  录</string>
    <string name="logining_tips">登录中...</string>
    <string name="login_agree">同意</string>
    <string name="login_agreement">《友借用户服务协议》</string>
    <string name="register_password_check">6位数字登录密码</string>
    <string name="title_create_iou">借钱给他人</string>
    <string name="title_signature">向朋友借钱</string>
    <string name="borrower_name">债务人姓名</string>
    <string name="lender_name">债权人姓名</string>
    <string name="borrower_name_hint">请填写借款方真实姓名</string>
    <string name="lender_name_hint">请填写出借方真实姓名</string>
    <string name="borrow_amount">借款金额</string>
    <string name="start_date">借款日期</string>
    <string name="due_date">还款日期</string>
    <string name="date_hint">请选择借款日期</string>
    <string name="date2_hint">请选择还款日期</string>
    <string name="year_interest">年利率</string>
    <string name="year_interest_hint">0-100%</string>
    <string name="borrow_days">借款期限</string>
    <string name="total_principal_interest">本息共计</string>
    <string name="other_signature">对方签名</string>
    <string name="myself_signature">本人签名</string>
    <string name="identity">身份信息</string>
    <string name="pay_certificate">打款证明</string>
    <string name="remittance_proof">汇款证明</string>
    <string name="legal_text">法律文本</string>
    <string name="pay_back_text">还款确认书</string>
    <string name="lender_signature">债权人签名</string>
    <string name="borrower_signature">债务人签名</string>
    <string name="lender_identity">债权人身份</string>
    <string name="borrower_identity">债务人身份</string>
    <string name="lender_sure_signature">确认收款签字</string>
    <string name="save">保存</string>
    <string name="interest_remind">友借友情提示：当利率超出中国人民银行同期贷款利率4倍（约20）时，超出的部分利息将不受法律保护喔。</string>
    <string name="incomplete_remind">信息填写不完整，请继续填写</string>
    <string name="date_remind">还款日期不能早于借款日期</string>
    <string name="refuse_send_title">捎句话</string>
    <string name="refuse_send_title_left">取消</string>
    <string name="refuse_send_title_right">发送</string>
    <string name="iou_lender_show">债权人姓名</string>
    <string name="iou_borrower_show">债务人姓名</string>
    <string name="iou_name_error_tip">请输入对方的中文名</string>
    <string name="iou_without_login_tip">您还没有登录，登录以后就能创建借条啦</string>
    <string name="iou_without_login_tip_cancel">取消</string>
    <string name="iou_without_login_tip_sure">去登陆</string>
    <string name="iou_relevant_agreement_title">友借平台服务协议</string>
    <string name="iou_relevant_agreement"></string>
    <string name="to_write_your_signature">点击签名</string>
    <string name="to_see_legal_text">点击查看</string>
    <string name="share_title">友借</string>
    <string name="iou_detail_step1_cancel">取消借款，对方将收到提醒</string>
    <string name="iou_detail_step1_cancel_by_lender">确定取消借条？</string>
    <string name="iou_detail_lender_accept">确认借条时请先确认已经收到短信借条喔</string>
    <string name="iou_detail_lender_reject">是否给农民捎句话</string>
    <string name="iou_detail_reject_remind">可输入20字以内拒绝理由（选填）</string>
    <string name="iou_detail_lender_reject_sure">是</string>
    <string name="iou_detail_lender_reject_cancel">不用了</string>
    <string name="iou_detail_lender_confirm_payback">农民没有提交打款信息，是否确认还款？</string>
    <string name="iou_detail_borrower_confirm_payback">点击“我要还款”表示您已经给地主打款</string>
    <string name="iou_detail_borrower_cuicui_payback">点击催催他，对方将收到提醒</string>
    <string name="iou_detail_lender_confirm_payback_normal">确认收款签字前请先确定您已收到农民还款</string>
    <string name="iou_detail_lender_confirm_payback_normal_sure">签字</string>
    <string name="iou_detail_lender_confirm_payback_normal_cancel">取消收款</string>
    <string name="iou_detail_signature_finish_lender_confirm">确认收款成功</string>
    <string name="iou_detail_signature_finish_borrower_accept">确认借款成功</string>
    <string name="iou_detail_borrower_accept">请前往签字页面签字以完成借款确认</string>
    <string name="iou_detail_before_share_2signature">发送借条前请先完成个人签名</string>
    <string name="iou_detail_before_share_2signature_sure">去签名</string>
    <string name="iou_detail_before_share_2signature_cancel">取消</string>
    <string name="iou_detail_before_lender_cuicui">完成个人签名就能成功催农民接受借条啦</string>
    <string name="iou_detail_before_lender_cuicui_sure">去签名</string>
    <string name="iou_detail_before_lender_cuicui_cancel">不催了</string>
    <string name="iou_detail_before_identity">为了您的账户安全。请您在交易前完成实名认证</string>
    <string name="iou_detail_before_identity_sure">去认证</string>
    <string name="iou_detail_before_identity_cancel">稍后再说</string>
    <string name="iou_detail_send_before_borrower_auth_step2">您的身份认证信息未完成，完成之后才能发送借条喔</string>
    <string name="iou_detail_send_before_borrower_auth_step2_sure">去完成</string>
    <string name="iou_detail_send_before_borrower_auth_step2_cancel">取消</string>
    <string name="iou_detail_send_before_borrower_accept_auth_step2">您的身份认证信息未完成，完成之后才能接受借条喔</string>
    <string name="iou_detail_send_before_borrower_accept_auth_step2_sure">去完成</string>
    <string name="iou_detail_send_before_borrower_accept_auth_step2_cancel">取消</string>
    <string name="iou_detail_before_identity_by_borrower_sure">去认证</string>
    <string name="iou_detail_before_identity_by_borrower_cancel">取消</string>
    <string name="iou_detail_before_lender_accept_auth_check_sure">确定</string>
    <string name="iou_detail_before_lender_accept_auth_check_cancel">稍后再借</string>
    <string name="iou_detail_before_lender_accept_auth_error">农民身份认证信息未通过，是否待农民身份信息通过之后再确认借条？</string>
    <string name="iou_detail_before_lender_accept_auth_error_sure">是</string>
    <string name="iou_detail_before_lender_accept_auth_error_cancel">否</string>
    <string name="iou_detail_lender_accept_before_tip">确认借款前请先确保已经收到农民的短信借条喔~</string>
    <string name="iou_detail_borrower_lender_no_accept_cancel">确定要取消借条吗？</string>
    <string name="iou_detail_borrower_lender_no_accept_cancel_sure">确定</string>
    <string name="iou_detail_borrower_lender_no_accept_cancel_cancel">关闭</string>
    <string name="iou_urge_repay_app">点击立即发送APP催债消息</string>
    <string name="iou_urge_repay_sms">24小时后农民未还款发送短信催债</string>
    <string name="iou_urge_repay_phone">短信催债2小后未还款将电话催债</string>
    <string name="lender_create_left_cuita">催催Ta</string>
    <string name="lender_create_right_cancel">取消借条</string>
    <string name="lender_confirm_left">借</string>
    <string name="lender_confirm_right">不借</string>
    <string name="lender_sure">确认收款</string>
    <string name="lender_urge">催债</string>
    <string name="borrower_create_left_message">催催他</string>
    <string name="borrower_create_right_cancel">取消借条</string>
    <string name="borrower_confirm_left">接受</string>
    <string name="borrower_confirm_cancel">拒绝</string>
    <string name="title_profile">我的</string>
    <string name="authentication">认证信息</string>
    <string name="no_login">登录</string>
    <string name="give_feedback">联系我们</string>
    <string name="help_center">知识库</string>
    <string name="title_auth_status">认证信息</string>
    <string name="auth_status_step2_check_tip">审核在一个工作日内完成，审核通过将短信通知您</string>
    <string name="title_auth_step1">实名认证</string>
    <string name="title_auth_step2">身份认证</string>
    <string name="title_auth_step3">提交成功</string>
    <string name="auth_tips1">请确认证件的清晰度、证件的四个角都在图片中</string>
    <string name="auth_tips2">请上传真实照片并保持照片清晰</string>
    <string name="auth_idcard_front_title">第一步 拍摄身份证正面照</string>
    <string name="auth_idcard_reverse_title">第二步 拍摄身份证反面照</string>
    <string name="auth_idcard3_people_title">第三步 请上传手持身份证照片</string>
    <string name="photo_as_shown">如下图所示</string>
    <string name="name_input_hint">请填写你的真实姓名</string>
    <string name="idcard_input_hint">请填写与用户姓名相符的真实身份证号</string>
    <string name="auth_next_step">提交认证</string>
    <string name="auth_completed">完成</string>
    <string name="auth_setp1_tip1">请保持证件与用户姓名信息相符，如填写错误、虚假信息，将不能通过系统实名认证</string>
    <string name="auth_setp1_tip2">身份证件信息查询与公安机关联网，请务必确保真实性，一旦提交成功将不得修改。我们会对您提交的信息严格保密。</string>
    <string name="auth_setp2_tip">请确保证件清晰度、证件四个角都在图片内</string>
    <string name="auth_step2_id_front">身份证正面照</string>
    <string name="auth_step2_id_reverse">身份证反面照</string>
    <string name="auth_step2_id_people">上传手持身份证照片</string>
    <string name="auth_step3_tip">我们会在1个工作日内为您审核完毕哦~</string>
    <string name="auth_step3_back_main">返回</string>
    <string name="title_identity_detail">详细信息</string>
    <string name="auth_step2_without1_tip">身份认证前请先实名认证</string>
    <string name="auth_step2_fail_tip">信息提交不完整，请继续提交</string>
    <string name="auth_name_error_tip">请输入中文名</string>
    <string name="title_help">使用帮助</string>
    <string name="help_about_borrow">关于借入</string>
    <string name="help_about_lender">关于借出</string>
    <string name="help_about_auth">关于认证</string>
    <string name="feedback_context_hint">请在此输入您的意见</string>
    <string name="feedback_slogan">感谢您的意见，我们会加以改进提供更好的服务。!</string>
    <string name="feedback_your_way">您的联系方式</string>
    <string name="feedback_choice">(选填)</string>
    <string name="feedback_way_hint">QQ/手机号/邮箱</string>
    <string name="feedback_btn">提交</string>
    <string name="sys_setting_dialog_vierify">验证码已发送至</string>
    <string name="sys_setting_dialog_sure">确定</string>
    <string name="sys_setting_dialog_cancel">取消</string>
    <string name="sys_setting_dialog_logout">您真的要退出吗？</string>
    <string name="app_logo">applogo</string>
    <string name="Take_hint_1">1、提现手续费为提取现金的0.15%，不足2元的按2元收取。</string>
    <string name="Take_hint_2">2、每日提现金额最高为5万元，单笔最低限额为100元，提现金额为整数元。</string>
    <string name="Take_hint_3">3、提现到账时间为1-2个工作日（节假日顺延）。</string>
</resources>