<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_transparent_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_dialog_top_bank"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_ccgray" />

    <TextView
        android:id="@+id/textview_dialog_bank_tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="90dp"
        android:paddingBottom="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="15dp"
        android:text="@string/sys_setting_dialog_logout"
        android:textColor="@color/text_color_33gray"
        android:textSize="@dimen/text_size_middle_s" />

    <TextView
        android:id="@+id/button_dialog_bank_bottom"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="13dp"
        android:background="@drawable/backgroud_bg_red_corner"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sys_setting_dialog_sure"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_middle_s" />

</LinearLayout>