<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_eegray"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_color_white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/cqd_personal_about_icon_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_33gray"
                    android:textSize="@dimen/text_size_middle"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textview_version_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_version_name"
                    android:textColor="@color/text_color_66gray"
                    android:textSize="@dimen/text_size_small" />


                <TextView
                    android:id="@+id/textview_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="22dp"
                    android:gravity="start"
                    android:lineSpacingExtra="4dp"
                    android:minHeight="60dp"
                    android:textColor="@color/text_color_33gray"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:paddingTop="12dp">

                <LinearLayout
                    android:id="@+id/lineaylayout_tell_phone"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/textview_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="13dp"
                        android:drawableTop="@drawable/cqd_personal_about_icon_phone"
                        android:text="@string/app_custom_service"
                        android:textSize="@dimen/text_size_middle_s" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lineaylayout_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="13dp"
                        android:drawableTop="@drawable/cqd_personal_about_icon_opinion"
                        android:text="@string/app_feedback"
                        android:textSize="@dimen/text_size_middle_s" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout_online_service"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="13dp"
                        android:drawableTop="@drawable/cqd_personal_about_icon_online"
                        android:text="@string/app_customer_service"
                        android:textSize="@dimen/text_size_middle_s" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>