<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_transparent_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_dialog_sys_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/sys_setting_dialog_vierify"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/textview_dialog_sys_setting_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_big"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edittext_dialog_gesture_verify_num"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_dialog_sys_setting_bg"
                android:inputType="number"
                android:padding="5dp" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#999999"></View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dialog_gesture_verify_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:padding="10dp"
                android:text="@string/sys_setting_dialog_cancel"
                android:textColor="@color/text_color_green_dialog"
                android:textSize="@dimen/text_size_big" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="#999999"></View>

            <Button
                android:id="@+id/button_dialog_gesture_verify_sure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:padding="10dp"
                android:text="@string/sys_setting_dialog_sure"
                android:textColor="@color/text_color_green_dialog"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
